[package]
name = "ot-dspm"
version = "0.1.0"
edition = "2021"
description = "Passive OT network traffic analyzer for data security posture management"
license = "MIT"
rust-version = "1.75"

[[bin]]
name = "ot-dspm"
path = "src/main.rs"

[lib]
name = "ot_dspm"
path = "src/lib.rs"

[dependencies]
# Packet capture
pcap = "2.2"
pnet = "0.35"

# Protocol parsing
nom = "7.1"

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Concurrent data structures
dashmap = "6.1"

# Persistence
rusqlite = { version = "0.32", features = ["bundled", "chrono", "uuid"] }

# Serialisation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Pattern matching
regex = "1.11"
aho-corasick = "1.1"

# IDs
uuid = { version = "1.11", features = ["v4", "serde"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.14"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.bench]
opt-level = 3
